--- a/rmd/plotForestAreasMap.Rmd
+++ b/rmd/plotForestAreasMap.Rmd
@@ -1,3 +1,8 @@
+---
+title: "World map of forest covered land area"
+output: html_document
+---
+
 Load libraries ----------------------------------------------------------
 
 ```{r }
