Knit output to a docs folder

--- a/rmd/plotForestAreasMap.Rmd
+++ b/rmd/plotForestAreasMap.Rmd
@@ -1,13 +1,19 @@
 ---
 title: "World map of forest covered land area"
 output: html_document
+knit: (function(input_file, encoding) {
+  out_dir <- '../docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 Load libraries ----------------------------------------------------------
 
 ```{r }
-library("rworldmap")
-library("RColorBrewer")
+library(here)
+library(rworldmap)
+library(RColorBrewer)
 ```
 
 Load data ---------------------------------------------------------------
