--- a/rmd/analyseMasterdataDist.Rmd
+++ b/rmd/analyseMasterdataDist.Rmd
@@ -1,6 +1,12 @@
 ---
 title: "Exploring the distribution of considered variables"
 output: html_document
+
+knit: (function(input_file, encoding) {
+  out_dir <- '../docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 Paket moments fuer skewness und kurtosis benoetigt
